--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -7,7 +7,7 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" href="__ADDON__/img/clashgithub/favicon.ico" type="image/x-icon"/>
+<link rel="icon" href="/assets/website/img/clashgithub/favicon.ico" type="image/x-icon"/>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-12-11">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-12-11-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-12-11-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">12月11日→18.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、韩国、香港、美国、新加坡、欧洲、加拿大等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-12-10">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-12-10-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -221,22 +235,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-12-01">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-12-1-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-12-1-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了韩国、新加坡、香港、美国、欧洲、日本、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-27.htm">27</a></li><li><a href="/free-nodes/page-28.htm">28</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-28.htm">28</a></li><li><a href="/free-nodes/page-29.htm">29</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-6-free-clash.htm" title="4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接">4月6日→21.7M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-20-free-v2ray.htm" title="6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-subscribe-node.htm" title="9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-20-free-v2ray-subscribe.htm" title="10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-12-free-ssr-node.htm" title="7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" title="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-8-free-node-subscribe.htm" title="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-shadowrocket-node.htm" title="8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-29-shadowrocket-node.htm" title="5月29日→21.5M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月29日→21.5M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-25-free-ssr-node.htm" title="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-19-clash-windows.htm" title="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-30-free-shadowrocket-node.htm" title="7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-25-node-share-links.htm" title="11月25日→19.8M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月25日→19.8M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-5-free-clash.htm" title="11月5日→22M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">11月5日→22M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-27-clash-node.htm" title="8月27日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月27日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-16-free-shadowrocket-node.htm" title="4月16日→20.6M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月16日→20.6M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
