--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-03">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/cc93aa4b19cc04eb52a9aba9ef1e6db7.webp" alt="10月3日→19.4M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月3日→19.4M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了新加坡、美国、欧洲、日本、韩国、加拿大、香港等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-02">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-09-23">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-9-23-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7f7309e6b17f9cbb639a778e73fc546c.webp" alt="9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-9-23-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、新加坡、香港、美国、韩国、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-28.htm">28</a></li><li><a href="/free-nodes/page-29.htm">29</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-7-clash-windows.htm" title="4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm" title="3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-5-free-node-subscribe.htm" title="10月5日→18.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">10月5日→18.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-20-free-subscribe-node.htm" title="4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接">4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-6-free-high-speed-nodes.htm" title="8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" title="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接">4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-6-clash-node.htm" title="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-18-clash-v2ray-ss-ssr.htm" title="9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-5-clash-windows.htm" title="6月5日→20.2M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月5日→20.2M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-10-node-share-links.htm" title="3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" title="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-10-node-share.htm" title="6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-17-clash-node.htm" title="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-4-free-ssr-subscribe.htm" title="8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">8月4日→22.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-20-clash-v2ray-ss-ssr.htm" title="9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
